--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap stylesheet-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- Custom stylesheet -->
     <link href="index.css" rel="stylesheet">
     <title>Book Search</title>
+    <!-- jQuery library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -18,17 +21,18 @@
                 <button type="submit" class="btn btn-primary">Search</button>
             </div>
         </form>
+        <!-- Button to view all comments -->
         <div class="d-flex justify-content-center">
             <button id="view-all-comments" type="button" class="btn btn-secondary">View All Comments</button>
         </div>
-        <div id="all-comments-container" style="display:none;" class="mt-3"></div>
         <h2 class="text-center mt-4">Search Results:</h2>
+        <!-- Results that match the user search -->
         <div id="results" class="mt-3"></div>
     </section>
 
 
 
-    <!-- Comment Modal -->
+    <!-- Modal used to add comment to particular book -->
     <div class="modal" id="comment-modal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -59,7 +63,9 @@
         </div>
     </div>
 
+    <!-- Function JS-->
     <script type="text/javascript" src="index.js"></script>
+    <!-- Bootstrap JS bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
