--- a/SoftwareDeveloperAssessment/Web Application/index.html
+++ b/SoftwareDeveloperAssessment/Web Application/index.html
@@ -1,2 +1,6 @@
 {% import "bootstrap/wtf.html" as wtf %}
-{{ wtf.quick_form(form) }}
+{% if line %}
+    <h3>Poem Line Found: {line}</h3>
+{% endif %}
+{{ wtf.quick_form(poetry_form) }}
+{{ wtf.quick_form(poetry_req) }}
